@@ -20,8 +20,6 @@
  * along with this program; if not, see <http://www.gnu.org/licenses/> 
  */
 
-#include <stdio.h>
-
 #include <lqr/lqr_all.h>
 
 #ifdef __LQR_DEBUG__
